--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Tic-tac-toe</title>
+		<title>Tic-tac-toe!</title>
 		<link rel="stylesheet" href="css/tic-tac-toe.css">
 	</head>
 
