HTML file updated.

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -24,6 +24,6 @@
 				<td data-row="2" data-col="2"></td>
 			</tr>
 		</table>
-		<script type="text/javascript" src="tic-tac-toe.js"></script>
+		<script type="text/javascript" src="js/tic-tac-toe.js"></script>
 	</body>
 </html>
