--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<table>
+		<table class="noselect">
 			<tr>
 				<td data-row="0" data-col="0"></td>
 				<td data-row="0" data-col="1"></td>
